[metadata]
# tests comment
name = test_project
version = 0.0.1-dev
description = Test project for software development workshop
long_description = file: README.rst


# Author information
author = Jakob Vanhoefer
author_email = test@test.com
maintainer = Jakob Vanhoefer
maintainer_email = test@test.com

# keywords
keywords =
    Code
    Test Project
    Ceterum censeo cartaginem esse delendam


# licensing
license = MIT
license_file = license


# URLs associated with the project
url = https://github.com/jvanhoefer/test_project
download_url = https://github.com/jvanhoefer/test_project
project_urls =
    Bug Tracker = https://github.com/jvanhoefer/test_project/issues
    Source Code = https://github.com/jvanhoefer/test_project
    Documentation = https://github.com/jvanhoefer/test_project


# classifiers
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics


[options]
# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
